--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "NODE_ENV=production webpack --mode production",
-    "watch": "NODE_ENV=development webpack --mode development"
+    "watch": "NODE_ENV=development webpack --mode development",
+    "release": "release-it"
   },
   "repository": {
     "type": "git",
@@ -25,13 +26,14 @@
   },
   "homepage": "https://github.com/eea/volto-datablocks#readme",
   "dependencies": {
-    "@plone/volto": "4.0.0-alpha.9"
+    "@plone/volto": "^4.0.0-alpha.9"
   },
   "devDependencies": {
     "eslint-plugin-prettier": "3.0.1",
     "postcss-overrides": "3.1.4",
     "prettier": "1.17.0",
     "prettier-stylelint": "0.4.2",
+    "release-it": "^12.4.3",
     "webpack-cli": "^3.3.10"
   }
 }
