--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "webpack-cli": "^3.3.10"
   },
   "dependencies": {
+    "humanize-plus": "^1.8.2",
     "react-pretty-numbers": "^3.0.0"
   }
 }
