--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   },
   "dependencies": {
     "humanize-plus": "^1.8.2",
-    "react-pretty-numbers": "^3.0.0"
+    "react-pretty-numbers": "^3.0.0",
+    "react-visibility-sensor": "5.1.1"
   }
 }
