--- a/package.json
+++ b/package.json
@@ -37,8 +37,6 @@
     "webpack-cli": "^3.3.10"
   },
   "dependencies": {
-    "humanize-plus": "^1.8.2",
-    "react-pretty-numbers": "^3.0.0",
-    "react-visibility-sensor": "5.1.1"
+    "humanize-plus": "^1.8.2"
   }
 }
