--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "webpack-cli": "^3.3.10"
   },
   "dependencies": {
-    "humanize-plus": "^1.8.2"
+    "axios": "^0.19.2",
+    "humanize-plus": "^1.8.2",
+    "performant-array-to-tree": "^1.7.1"
   }
 }
