--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "volto-datablocks",
   "version": "1.0.1",
   "description": "",
-  "main": "dist/build.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "NODE_ENV=production webpack --mode production",
