--- a/package.json
+++ b/package.json
@@ -1,43 +1,48 @@
 {
-  "name": "volto-datablocks",
+  "name": "@eeacms/volto-datablocks",
   "version": "1.0.1",
-  "description": "",
+  "description": "(EEA) Provides primitives for data connectivity to volto-plotlycharts and other blocks",
   "main": "src/index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "NODE_ENV=production webpack --mode production",
-    "watch": "NODE_ENV=development webpack --mode development",
-    "release": "release-it"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/eea/volto-datablocks.git"
-  },
+  "author": "European Environment Agency: IDM2 A-Team",
+  "license": "MIT",
+  "homepage": "https://github.com/eea/volto-datablocks",
   "keywords": [
-    "Plone",
-    "Volto",
-    "React",
-    "Semantic-UI"
+    "volto-addon",
+    "volto-block",
+    "volto-grid",
+    "volto",
+    "plone",
+    "react"
   ],
-  "author": "Tiberiu Ichim",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/eea/volto-datablocks/issues"
-  },
-  "homepage": "https://github.com/eea/volto-datablocks#readme",
-  "peerDependencies": {
-    "@plone/volto": "^4.0.0"
-  },
   "devDependencies": {
-    "eslint-plugin-prettier": "3.0.1",
     "postcss-overrides": "3.1.4",
-    "prettier": "1.17.0",
-    "prettier-stylelint": "0.4.2",
-    "release-it": "^12.4.3",
     "webpack-cli": "^3.3.10"
   },
   "dependencies": {
     "humanize-plus": "^1.8.2",
     "performant-array-to-tree": "^1.7.1"
+  },
+  "peerDependencies": {
+    "@plone/volto": "^4.0.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/eea/volto-datablocks.git"
+  },
+  "bugs": {
+    "url": "https://github.com/eea/volto-datablocks/issues"
+  },
+  "scripts": {
+    "release": "release-it",
+    "bootstrap": "node bootstrap",
+    "stylelint": "../../../node_modules/stylelint/bin/stylelint.js --allow-empty-input 'src/**/*.{css,less}'",
+    "stylelint:overrides": "../../../node_modules/.bin/stylelint --syntax less --allow-empty-input 'theme/**/*.overrides' 'src/**/*.overrides'",
+    "stylelint:fix": "yarn stylelint --fix && yarn stylelint:overrides --fix",
+    "prettier": "../../../node_modules/.bin/prettier --single-quote --check 'src/**/*.{js,jsx,json,css,less,md}'",
+    "prettier:fix": "../../../node_modules/.bin/prettier --single-quote --write 'src/**/*.{js,jsx,json,css,less,md}'",
+    "lint": "../../../node_modules/eslint/bin/eslint.js --max-warnings=0 'src/**/*.{js,jsx}'",
+    "lint:fix": "../../../node_modules/eslint/bin/eslint.js --fix 'src/**/*.{js,jsx}'",
+    "cypress:run": "../../../node_modules/cypress/bin/cypress run",
+    "cypress:open": "../../../node_modules/cypress/bin/cypress open"
   }
 }
