remove slate dependency

--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
     "humanize-plus": "^1.8.2",
     "performant-array-to-tree": "^1.7.1",
     "plotly.js": "1.57.0",
-    "react-plotly.js": "~2.5.0",
-    "volto-slate": "github:eea/volto-slate#1.0.7"
+    "react-plotly.js": "~2.5.0"
   },
   "peerDependencies": {
     "@plone/volto": "^4.0.0"
