--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "webpack-cli": "^3.3.10"
   },
   "dependencies": {
-    "@eeacms/volto-embed": "1.0.0",
+    "@eeacms/volto-embed": "github:eea/volto-embed#master",
     "humanize-plus": "^1.8.2",
     "performant-array-to-tree": "^1.7.1",
     "plotly.js": "1.57.0",
