--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "humanize-plus": "^1.8.2",
     "performant-array-to-tree": "^1.7.1",
     "plotly.js": "1.57.0",
-    "react-plotly.js": "~2.5.0"
+    "react-plotly.js": "~2.5.0",
+    "volto-embed": "github:eea/volto-embed#1.0.0"
   },
   "peerDependencies": {
     "@plone/volto": "^4.0.0"
