--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "performant-array-to-tree": "^1.7.1",
     "plotly.js": "1.57.0",
     "react-plotly.js": "~2.5.0",
+    "slate": "0.59.0",
     "volto-embed": "github:eea/volto-embed#1.1.0"
   },
   "peerDependencies": {
