--- a/package.json
+++ b/package.json
@@ -14,20 +14,23 @@
     "plone",
     "react"
   ],
-  "devDependencies": {
-    "postcss-overrides": "3.1.4",
-    "webpack-cli": "^3.3.10"
-  },
+  "addons": [
+    "volto-embed"
+  ],
   "dependencies": {
     "humanize-plus": "^1.8.2",
     "performant-array-to-tree": "^1.7.1",
     "plotly.js": "1.57.0",
     "react-plotly.js": "~2.5.0",
     "slate": "0.59.0",
-    "volto-embed": "github:eea/volto-embed#1.1.0"
+    "volto-embed": "github:eea/volto-embed#2.0.0"
+  },
+  "devDependencies": {
+    "postcss-overrides": "3.1.4",
+    "webpack-cli": "^3.3.10"
   },
   "peerDependencies": {
-    "@plone/volto": "^4.0.0"
+    "@plone/volto": "^12.0.0"
   },
   "repository": {
     "type": "git",
