--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "performant-array-to-tree": "^1.7.1",
     "plotly.js": "1.57.0",
     "react-plotly.js": "~2.5.0",
+    "sanitize-html": "^2.3.3",
     "volto-embed": "github:eea/volto-embed#2.0.0"
   },
   "devDependencies": {
