--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
   },
   "devDependencies": {
     "postcss-overrides": "3.1.4",
-    "webpack-cli": "^3.3.10"
+    "webpack-cli": "^3.3.10",
+    "@cypress/code-coverage": "^3.9.5",
+    "babel-plugin-transform-class-properties": "^6.24.1"
   },
   "peerDependencies": {
     "@plone/volto": "^12.0.0"
@@ -41,7 +43,7 @@
   },
   "scripts": {
     "release": "release-it",
-    "bootstrap": "node bootstrap",
+    "bootstrap": "npm install -g ejs; npm link ejs; node bootstrap",
     "stylelint": "../../../node_modules/stylelint/bin/stylelint.js --allow-empty-input 'src/**/*.{css,less}'",
     "stylelint:overrides": "../../../node_modules/.bin/stylelint --syntax less --allow-empty-input 'theme/**/*.overrides' 'src/**/*.overrides'",
     "stylelint:fix": "yarn stylelint --fix && yarn stylelint:overrides --fix",
