--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "volto-datablocks",
+  "name": "@eeacms/volto-datablocks",
   "version": "2.0.0",
   "description": "(EEA) Provides primitives for data connectivity to volto-plotlycharts and other blocks",
   "main": "src/index.js",
