--- a/package.json
+++ b/package.json
@@ -23,13 +23,14 @@
     "plotly.js": "1.57.0",
     "react-plotly.js": "~2.5.0",
     "sanitize-html": "^2.3.3",
+    "slate": "0.63.0",
     "volto-embed": "github:eea/volto-embed#2.0.0"
   },
   "devDependencies": {
-    "postcss-overrides": "3.1.4",
-    "webpack-cli": "^3.3.10",
     "@cypress/code-coverage": "^3.9.5",
-    "babel-plugin-transform-class-properties": "^6.24.1"
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "postcss-overrides": "3.1.4",
+    "webpack-cli": "^3.3.10"
   },
   "peerDependencies": {
     "@plone/volto": "^12.0.0"
