--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@eeacms/volto-embed"
   ],
   "dependencies": {
-    "@eeacms/volto-embed": "2.0.1",
+    "@eeacms/volto-embed": "^2.0.1",
     "humanize-plus": "^1.8.2",
     "performant-array-to-tree": "^1.7.1",
     "plotly.js": "1.57.0",
