--- a/package.json
+++ b/package.json
@@ -18,13 +18,13 @@
     "@eeacms/volto-embed"
   ],
   "dependencies": {
-    "@eeacms/volto-embed": "^2.0.1",
+    "@eeacms/volto-embed": "^2.0.4",
     "humanize-plus": "^1.8.2",
     "performant-array-to-tree": "^1.7.1",
-    "plotly.js": "1.57.0",
-    "react-plotly.js": "~2.5.0",
+    "plotly.js": "^2.5.1",
+    "react-plotly.js": "^2.5.1",
     "sanitize-html": "^2.3.3",
-    "slate": "0.63.0"
+    "slate": "^0.66.5"
   },
   "devDependencies": {
     "@cypress/code-coverage": "^3.9.5",
