--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@eeacms/volto-datablocks",
-  "version": "2.0.21",
+  "version": "2.0.20",
   "description": "(EEA) Provides primitives for data connectivity to volto-plotlycharts and other blocks",
   "main": "src/index.js",
   "author": "European Environment Agency: IDM2 A-Team",
@@ -23,6 +23,7 @@
     "@eeacms/volto-matomo": "*",
     "d3": "7.1.1",
     "humanize-plus": "^1.8.2",
+    "object-hash": "2.2.0",
     "performant-array-to-tree": "^1.7.1",
     "plotly.js": "^2.5.1",
     "react-plotly.js": "^2.5.1",
