--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "d3": "7.1.1",
     "humanize-plus": "^1.8.2",
     "object-hash": "2.2.0",
+    "react-countup": "6.1.1",
     "sanitize-html": "^2.3.3",
     "slate": "^0.62.0"
   },
