--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "humanize-plus": "^1.8.2",
     "object-hash": "2.2.0",
     "react-countup": "6.1.1",
+    "react-lines-ellipsis": "0.15.0",
     "sanitize-html": "^2.3.3",
     "slate": "^0.62.0"
   },
