--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
   ],
   "addons": [
     "@eeacms/volto-embed",
-    "@eeacms/volto-matomo"
+    "@eeacms/volto-matomo",
+    "@eeacms/volto-group-block"
   ],
   "dependencies": {
     "@eeacms/volto-embed": "*",
     "@eeacms/volto-matomo": "*",
+    "@eeacms/volto-group-block": "*",
     "d3": "7.1.1",
     "humanize-plus": "^1.8.2",
     "object-hash": "2.2.0",
