--- a/package.json
+++ b/package.json
@@ -21,11 +21,12 @@
   "dependencies": {
     "@eeacms/volto-embed": "*",
     "@eeacms/volto-matomo": "*",
+    "@eeacms/volto-openlayers-map": "^0.1.3",
     "d3": "7.1.1",
     "humanize-plus": "^1.8.2",
     "object-hash": "2.2.0",
     "react-countup": "6.1.1",
-    "react-lines-ellipsis": "0.15.0",
+    "react-simple-maps": "^2.3.0",
     "sanitize-html": "^2.3.3",
     "slate": "^0.62.0"
   },
