Improved visibility sensor + improved route parameters

--- a/package.json
+++ b/package.json
@@ -21,12 +21,13 @@
   ],
   "dependencies": {
     "@eeacms/volto-embed": "*",
-    "@eeacms/volto-matomo": "*",
     "@eeacms/volto-group-block": "*",
+    "@eeacms/volto-matomo": "*",
     "d3": "7.1.1",
     "humanize-plus": "^1.8.2",
     "object-hash": "2.2.0",
     "react-countup": "6.1.1",
+    "react-visibility-sensor": "5.1.1",
     "sanitize-html": "^2.3.3",
     "slate": "^0.62.0"
   },
