--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@eeacms/volto-group-block": "*",
     "@eeacms/volto-matomo": "*",
     "d3": "7.1.1",
+    "date-fns": "2.28.0",
     "humanize-plus": "^1.8.2",
     "object-hash": "2.2.0",
     "react-countup": "6.1.1",
