--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "@cypress/code-coverage": "^3.9.5",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "postcss-overrides": "3.1.4",
-    "webpack-cli": "^3.3.10"
+    "webpack-cli": "^3.3.10",
+    "md5": "^2.3.0"
   },
   "repository": {
     "type": "git",
