--- a/package.json
+++ b/package.json
@@ -32,10 +32,9 @@
     "sanitize-html": "^2.3.3"
   },
   "devDependencies": {
-    "@cypress/code-coverage": "^3.9.5",
+    "@plone/scripts": "*",
+    "@cypress/code-coverage": "^3.10.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
-    "postcss-overrides": "3.1.4",
-    "webpack-cli": "^3.3.10",
     "md5": "^2.3.0"
   },
   "repository": {
