pin sanitize-html to stable version

--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "object-hash": "2.2.0",
     "react-countup": "6.1.1",
     "react-visibility-sensor": "5.1.1",
-    "sanitize-html": "^2.3.3"
+    "sanitize-html": "2.7.3"
   },
   "devDependencies": {
     "@cypress/code-coverage": "^3.10.0",
