--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "cypress-fail-fast": "^5.0.1",
     "husky": "^8.0.3",
     "lint-staged": "^14.0.1",
-    "md5": "^2.3.0"
+    "md5": "^2.3.0",
+    "dotenv": "^16.3.2"
   },
   "repository": {
     "type": "git",
