--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "sanitize-html": "2.7.3"
   },
   "devDependencies": {
+    "cypress": "13.1.0",
     "@cypress/code-coverage": "^3.10.0",
     "@plone/scripts": "*",
     "babel-plugin-transform-class-properties": "^6.24.1",
