chore: added volto-listing-block to dependencies

--- a/package.json
+++ b/package.json
@@ -17,13 +17,15 @@
   "addons": [
     "@eeacms/volto-embed",
     "@eeacms/volto-matomo",
-    "@eeacms/volto-group-block"
+    "@eeacms/volto-group-block",
+    "@eeamcs/volto-listing-block"
   ],
   "dependencies": {
     "@eeacms/countup": "*",
     "@eeacms/volto-embed": "*",
     "@eeacms/volto-group-block": "*",
     "@eeacms/volto-matomo": "*",
+    "@eeamcs/volto-listing-block": "*",
     "d3": "7.1.1",
     "date-fns": "2.28.0",
     "humanize-plus": "^1.8.2",
