--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "date-fns": "2.28.0",
     "humanize-plus": "^1.8.2",
     "object-hash": "2.2.0",
+    "react-color": "2.19.3",
     "react-countup": "6.1.1",
     "react-visibility-sensor": "5.1.1",
     "sanitize-html": "2.7.3"
